2.1.4 ~ fix about position overlapping

--- a/css/index.css
+++ b/css/index.css
@@ -1718,9 +1718,9 @@ body.appLang-fr #saveAsNew						{ font-size: 14px; }
 #b700:before						{ content: '\B700'; font-size: 34px; }
 #b800:before						{ content: '\B800'; }
 #b900:before						{ content: '\B900'; }
-#appStores #b000					{ position: absolute; bottom: 0; left: 0; width: 100%; display: block; height: 50px; background-color: rgba(0,0,0,0); }
+#appStores #b000					{ position: absolute; bottom: 0; left: 0; width: 100%; display: block; height: 38px; background-color: rgba(0,0,0,0); }
 #b000:before						{ position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: block; content: 'ChronoBurn.com'; font-family: 'Helvetica Neue', Helvetica, 'Segoe WP', Arial, sans-serif !important; text-align: center; line-height: 0; padding: 0; margin: 0; min-height: inherit; font-weight: 400; font-size: 20px; }
-#developedBy						{ position: absolute; bottom: 0; left: 0; right: 0; display: block; text-align: center; font-size: 13px; color: #aaa; height: 44px; line-height: 16px; }
+#developedBy						{ width: 100%; display: block; text-align: center; font-size: 13px; color: #aaa; height: 44px; line-height: 16px; }
 #contactDeveloper 					{ color: #777; display: block; padding-top: 3px; }
 #developedBy.button span			{ color: #bbb; }
 /**/
